--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ pytest==4.6.4
 pytest-xdist
 mock
 pytest-cov
+coverage==4.5.4
 docker==3.7.3
 pyOpenSSL
 lxml==4.3.4
@@ -12,7 +13,7 @@ requests[security]
 ujson>=1.35
 pyyaml
 httplib2
-jinja2
+jinja2==2.10.3
 urllib3==1.24.2
 pyOpenSSL
 flake8>=3.7.7
